# fmo_analysis

./: .gitignore  README.md  pyproject.toml
fmo_analysis/: ClassExciton_dual.py  ClassLoadDataFiles.py  ClassSaveSpectra.py  ClassSaveiSpectra.py  Exciton_mutant_subs.py  __init__.py  exciton-mutants.py  exciton.py  main.py  structures.py  util.py
scripts/: README.md
scripts/compare_versions/: README.md  compare_outputs.py  make_outputs.py
scripts/run_line_profiler/: README.md  profile.py
scripts/time_execution/: README.md  time_execution.py
tests/: conftest.py  test_computation.py  test_fmo_analysis.py  test_io.py
validation_data/: conf.csv
