[tool.poetry]
name = "fmo_analysis"
version = "0.14.0"
description = ""
authors = ["Zach Mitchell <zmitchell@fastmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
click = "^8.0.3"
scipy = "^1.7.3"
ham2spec = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
line-profiler = "^3.3.1"

[tool.poetry.scripts]
fmo-analysis = "fmo_analysis.main:cli"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
